<resources>
    <string name="app_name">BANANA</string>
    <string name="button">Button</string>
    <string name="cliques_contados">Cliques_contados!</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_endereco">Endereço</string>
    <string name="hint_cidade">Cidade</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_telefone">Telefone</string>
    <string name="hint_cep">CEP</string>
    <string name="hint_aniversario">Aniversário</string>
</resources>
