<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">


        <EditText
            android:id="@+id/edt_nome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nome"
            android:drawableStart="@android:drawable/ic_menu_edit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edt_endereco"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_endereco"
            android:drawableStart="@android:drawable/ic_menu_mylocation"
            app:layout_constraintTop_toBottomOf="@id/edt_nome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />


        <EditText
            android:id="@+id/edt_cidade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cidade"
            android:drawableStart="@android:drawable/ic_menu_compass"
            app:layout_constraintTop_toBottomOf="@id/edt_endereco"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:drawableStart="@android:drawable/ic_dialog_email"
            app:layout_constraintTop_toBottomOf="@id/edt_cidade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />


        <EditText
            android:id="@+id/edt_telefone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_telefone"
            android:inputType="phone"
            android:drawableStart="@android:drawable/ic_menu_call"
            app:layout_constraintTop_toBottomOf="@id/edt_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <Spinner
            android:id="@+id/spinner_estado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edt_telefone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />


        <EditText
            android:id="@+id/edt_cep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cep"
            android:inputType="number"
            android:drawableStart="@android:drawable/ic_menu_mapmode"
            app:layout_constraintTop_toBottomOf="@id/spinner_estado"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/edt_aniversario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_aniversario"
            android:drawableStart="@android:drawable/ic_menu_my_calendar"
            android:focusable="false"
            app:layout_constraintTop_toBottomOf="@id/edt_cep"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_calendario"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp" />

        <ImageButton
            android:id="@+id/btn_calendario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_my_calendar"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintTop_toTopOf="@id/edt_aniversario"
            app:layout_constraintBottom_toBottomOf="@id/edt_aniversario"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>